--- a/HotelOrTaxi/assets/css/style-3.css
+++ b/HotelOrTaxi/assets/css/style-3.css
@@ -5,85 +5,24 @@
 
 /* Results Page */
 
-.grey { 
-	color:#999;
-}
+.grey { color:#999; }
 
-.search-results {
-	padding:15px;
-}
+.search-results { padding:15px; }
+.results-box { min-height:120px; }
+div#result-info { position:relative; margin-bottom:20px; padding:10px; width:350px; font-size:16px; text-align:center; background:#FFF; border-radius: 4px 4px 4px 4px; }
+div#result-info  span { font-size:16px; font-weight:bold; }
+.arrow-down { position:absolute; left:45px; top:60px; width:28px; height:10px; background: url(/assets/img/speechbubble-arrow.png) no-repeat bottom; }
+.search-results img { margin-right:25px; }
+.search-results span { vertical-align:middle; }
 
-.results-box {
-	min-height:120px;
-}
+.price { font-size:52px; font-weight:bold; }
 
-div#result-info {
-	background:white;
-	border-radius: 4px 4px 4px 4px;
-	text-align:center;
-	padding:10px;
-	font-size:16px;
-	margin-bottom:20px;
-	width:350px;
-	position:relative;
-}
+.subheadline { margin-right:15px; font-size:14px; }
 
-.arrow-down {
-	position:absolute;
-	left:45px;
-	width:28px;
-	height:10px;
-	top:60px;
-	background: url(/assets/img/speechbubble-arrow.png) no-repeat bottom;
-}
+.red-button { float:right; margin-top:25px; padding-left:10px; width:200px; height:50px; font-size:26px; color:white; line-height:50px; text-decoration:none; background:red url(/assets/img/button-arrow.png) no-repeat 90%; border:solid 1px white; border-radius: 4px 4px 4px 4px; }
+.red-button:hover { color:white; text-decoration:none; }
 
-div#result-info  span {
-	font-size:16px;
-	font-weight:bold;
-}
-
-.search-results  img {
-	margin-right:25px;
-}
-
-.search-results span {
-	vertical-align:middle;
-}
-
-.price {
-	font-size:52px;
-	font-weight:bold;
-}
-
-.subheadline {
-	font-size:14px;
-	margin-right:15px;
-}
-
-.red-button {
-	border-radius: 4px 4px 4px 4px;
-	height:50px;
-	width:200px;
-	font-size:26px;
-	background:red url(/assets/img/button-arrow.png) no-repeat 90%;
-	border:solid 1px white;
-	padding-left:10px;
-	line-height:50px;
-	color:white;
-	text-decoration:none;
-	float:right;
-	margin-top:25px;
-}
-
-.red-button:hover {
-	color:white;
-	text-decoration:none;
-}
-
-.separator {
-	border-top:dashed 1px #ccc;
-	margin:20px 0;
-}
+.separator { border-top:dashed 1px #ccc; margin:20px 0; }
 
 /*8888888*/
 
@@ -97,19 +36,11 @@ body, input, button, select, textarea { font-family: 'Open Sans', sans-serif; }
     border-color: red;
 }
 
-.navbar-inner {
-    min-height: 50px;
-}
+.navbar-inner { min-height: 50px; }
 
-.navbar .nav > li {
-    line-height:30px;
-}
+.navbar .nav > li { line-height:30px; }
 
-.hero-unit {
-    padding:20px;
-    margin-bottom:0px;
-    background-color: red;
-}
+.hero-unit { padding:20px; margin-bottom:0px; background-color: red; }
 
 select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
     border-radius: 4px 4px 4px 4px;
@@ -156,7 +87,18 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 .navbar-fixed-top {
     margin-bottom:0;
 }
-  
+
+.navbar-inverse .btn-navbar:hover,
+.navbar-inverse .btn-navbar:focus,
+.navbar-inverse .btn-navbar:active,
+.navbar-inverse .btn-navbar.active,
+.navbar-inverse .btn-navbar.disabled,
+.navbar-inverse .btn-navbar[disabled] {
+  color: #ffffff;
+  background-color:red;
+  *background-color: #000000;
+}
+
 /*888888*/
 
 /* Results Page */
